# Technopark-Cpp

./: README.md
.github/workflows/: main.yml
hw1/: CMakeLists.txt  correct_input.c  correct_input.h  exit_codes.h  in_hand.c  in_hand.h  main.c  mem_operations.c  mem_operations.h  out_hand.c  out_hand.h  search.c  search.h
hw1/tests/: CMakeLists.txt  correct_test.cpp  mem_test.cpp
